--- a/Liuj.html
+++ b/Liuj.html
@@ -96,8 +96,9 @@
           <div class="row text-justify text-main-cotent">
             <div class="col">
               <p class="my-0">
-                <span>|</span>臺灣鐵路管理局新建六家支線，並於 2011 年 11 月 11 日通車營運，在竹中站與「內灣線」銜接，連結臺鐵新竹站和高鐵新竹站，延伸至「縱貫線」,
-                形成的新竹鐵路網，無論是市區內的移動或是火車、高鐵的轉乘服務，還是轉往內灣的觀光路線， 皆提供了更加迅速的便捷服務，有效縮短行車時間，為民眾帶來便利的無縫接駁服務！</p>
+                <span>|</span>臺灣鐵路管理局新建六家支線，並於 2011 年 11 月 11
+                日通車營運，在竹中站與「內灣線」銜接，連結臺鐵新竹站和高鐵新竹站，延伸至「縱貫線」,形成的新竹鐵路網，無論是市區內的移動或是火車、高鐵的轉乘服務，還是轉往內灣的觀光路線，
+                皆提供了更加迅速的便捷服務，有效縮短行車時間，為民眾帶來便利的無縫接駁服務！</p>
             </div>
           </div>
           <div class="row justify-content-center">
