--- a/Ping.html
+++ b/Ping.html
@@ -82,21 +82,8 @@
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 中洲站">
-                        <p class="m-0 ml-4">中洲站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnArrow.png" alt="經由">
-                    </div>
-                    <div class="col-3 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtn1st.png" alt="沙崙線 長榮大學站">
-                        <p class="m-0 ml-4">長榮大學站</p>
-                    </div>
-                    <div class="col-2 px-0 d-flex align-items-center">
-                        <img src="./img/Shal/Shal-staBtnlast.png" alt="沙崙線 沙崙站">
-                        <p class="m-0 ml-4">沙崙站</p>
-                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="./img/Ping/Ping-StaMap.png" alt="平溪線 三貂嶺站 經由 大華站 菁桐站"></div>
                 </div>
             </div>
         </section>
@@ -122,101 +109,95 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="img-main-line"><img src="./img/Ping/main-Ping-line.png" alt="起站中洲站 迄站沙崙站"></div>
-                            <div class="img-main-train"><img src="./img/Ping/main-Ping-train.png" alt="台鐵列車"></div>
+                            <img src="./img/Ping/main-Ping-trainLine.png" alt="台鐵列車 起站三貂嶺站 迄站菁桐站">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <!-- 版型A -->
         <section>
             <div class="container section3">
-                <div class="row custom-row-mx-15  ">
-                    <div class="col-6">
-                        <div class="mini">
-                            <img class="img1" src="./img/Ping/Ping-waterTitle01.png" alt="瀑布標題">
-                        </div>
+                <div class="row">
+                    <div class="col-6 text-left">
+                        <img src="./img/Ping/Ping-waterTitle01.png" alt="走一趟全台最大簾幕瀑布">
                     </div>
-                    <div class="col-4"></div>
-                    <div class="col-2">
-                        <div class="mini1">
-                            <img class="img2" src="./img/Ping/Ping-waterTitle02.png" alt="鄰近平溪站">
-                        </div>
+                    <div class="col-6 text-right">
+                        <img src="./img/Ping/Ping-waterTitle02.png" alt="鄰近站點 平溪站">
                     </div>
                 </div>
-                <div class="row custom-row-mx-15">
-                    <div class="col-12 img-Ping-water01">
-                    </div>
-                </div>
-                <div class="row custom-row-mx-15 text-Ping-water01 text-justify">
+                <div class="row">
                     <div class="col">
-                        <p><span>|</span>當看到這樣的景象，會以為這是歐洲某處宮殿的景致吧，走過陽光下映著彩虹的阿波羅噴泉，穿過護城河上的橋墩，勇猛優雅的白色獅頭一字排開，橋面上莊嚴的奧林帕斯眾神也整齊陳列，走過橋面，博物館正面入口採高聳的圓頂造型及各面不同的希臘列柱設計，這樣的氣勢更能襯托出典藏寶物宮殿的華麗。
+                        <img class="rounded-lg" src="./img/Ping/Ping-water01.jpg" alt="十分瀑布">
+                    </div>
+                </div>
+                <div class="row text-justify text-Ping-water01">
+                    <div class="col">
+                        <p class="my-0">
+                            <span>|</span>十分瀑布位於新北市平溪區，在平溪線鐵路大華車站與十分車站之間，屬幕簾式瀑布，瀑布下方水潭極深，瀑布就像千軍萬馬奔騰，傾瀉而下，感覺就像一襲白色綢緞，墜入一大片寬廣深潭，瀑水形成的水氣經常彌漫在瀑潭上方，經陽光照射，便呈現出一道彩虹，顯現出晴空霓虹璀燦奪目，故有彩虹淵的美名。十分瀑布因岩層的傾向與水流相反，屬於逆斜層瀑布，此情況與北美的尼加拉瀑布相似，使其贏得「臺灣尼加拉瀑布」的美譽。
                         </p>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- 版型D -->
         <section>
-            <div class="container section4 ">
-                <div class="row align-items-center">
-                    <div class="col-5 ">
-                        <div class="mini">
-                            <img class="title-Ping-lamp01" src="./img/Ping/Ping-lampTitle.png" alt="">
+            <div class="container section4">
+                <div class="row justify-content-between text-justify">
+                    <div class="col-5 align-self-center">
+                        <div class="text-center"><img src="./img/Ping/Ping-lampTitle.png" alt="平溪鐵道天燈"></div>
+                        <div>
+                            <p class="my-0">
+                                <span>|</span>清道光年間，當地為宛如人間的仙境富足村落，當時由於山區交通不發達，官府無法管轄，遂成為山賊覬覦之地。村民為保性命，在冬至過後，即收拾家當遁入山區，直到元宵才派人回村察看，確定安全後，釋放天燈以報平安，演變而成今日的平溪天燈節。
+                            </p>
                         </div>
-                        <p class="text-Ping-lamp01 text-justify">
-                            清道光年間，當地為宛如人間的仙境富足村落，當時由於山區交通不發達，官府無法管轄，遂成為山賊覬覦之地。村民為保性命，在冬至過後，即收拾家當遁入山區，直到元宵才派人回村察看，確定安全後，釋放天燈以報平安，演變而成今日的平溪天燈節。
-                        </p>
                     </div>
-                    <div class="col-1"></div>
-                    <div class="col-6">
-                        <img class="img1" src="./img/Ping/Ping-lamp01.jpg" alt="">
-                    </div>
+                    <div class="col-6"><img class="rounded-lg" src="./img/Ping/Ping-lamp01.jpg" alt="平溪 天燈"></div>
                 </div>
             </div>
         </section>
+        <!-- 版型K -->
         <section>
-            <div class="section5">
-                <img src="./img/Ping/Ping-lamp02.jpg" alt="全螢幕天燈圖">
+            <div class="container-fluid section5 img-Ping-lamp02">
             </div>
         </section>
 
         <!-- 下一支線swiper -->
         <section>
-            <div class="container section6">
+            <div class="container nextTrip">
                 <div class="row">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
+                        <div class="swiper-button-prev"><img src="./img/main/nextTrip/main-btnL.png" alt="往前一支線"></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                                    <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                                    <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                                    <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                                    <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                                    <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                                    <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
+                        <div class="swiper-button-next"><img src="./img/main/nextTrip/main-btnR.png" alt="往後一支線"></div>
                     </div>
                 </div>
             </div>
