--- a/service.html
+++ b/service.html
@@ -67,7 +67,6 @@
         <!-- 旅客服務連結 -->
         <section>
             <div class="container service1">
-
                 <div id="hero-slides" class="row">
                     <div id="slides-cont">
                         <div id="slides">
@@ -76,7 +75,8 @@
                                 <div class="body">
                                     <div class="location">Taiwan Railways Administration ,MOTC.</div>
                                     <div class="headline">交通部台灣鐵路管理局</div>
-                                    <a href="https://www.railway.gov.tw/tra-tip-web/tip/tip001/tip121/query" target="_blank">
+                                    <a href="https://www.railway.gov.tw/tra-tip-web/tip/tip001/tip121/query"
+                                        target="_blank">
                                         <div class="link"><img src="./img/service/ser-card1-btn.png" alt=""></div>
                                     </a>
                                 </div>
@@ -104,94 +104,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                <!-- <div class="row">
-                    <div class="col-4">
-                        <div class="slide"
-                            style="background-image: url(https://alca.tv/static/u/ef5af971-fc46-4ee1-a589-980346478696_opt.png);">
-                            <div class="number">01</div>
-                            <div class="body">
-                                <div class="location">Shibuya, Japan</div>
-                                <div class="headline">Photo by Benjamin Hung</div><a
-                                    href="https://unsplash.com/photos/EYmhcdGuYmI" target="_blank">
-                                    <div class="link">View on Unsplash</div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="slide"
-                            style="background-image: url(https://alca.tv/static/u/ef5af971-fc46-4ee1-a589-980346478696_opt.png);">
-                            <div class="number">01</div>
-                            <div class="body">
-                                <div class="location">Shibuya, Japan</div>
-                                <div class="headline">Photo by Benjamin Hung</div><a
-                                    href="https://unsplash.com/photos/EYmhcdGuYmI" target="_blank">
-                                    <div class="link">View on Unsplash</div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="slide"
-                            style="background-image: url(https://alca.tv/static/u/ef5af971-fc46-4ee1-a589-980346478696_opt.png);">
-                            <div class="number">01</div>
-                            <div class="body">
-                                <div class="location">Shibuya, Japan</div>
-                                <div class="headline">Photo by Benjamin Hung</div><a
-                                    href="https://unsplash.com/photos/EYmhcdGuYmI" target="_blank">
-                                    <div class="link">View on Unsplash</div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-
-
-
-
-
-
-
-
-                <!-- <div class="row">
-                    <div class="col-4">
-                        <img src="" alt="">
-                        <div class="row">
-                            <div class="col"><img src="" alt=""></div>
-                        </div>
-                        <div class="row">
-                            <div class="col"><p></p></div>
-                        </div>
-                        <div class="row">
-                            <div class="col"><p></p></div>
-                        </div>
-                        <div class="row">
-                            <div class="col"><p></p></div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                    </div>
-                    <div class="col-4">
-                    </div>
-                </div> -->
             </div>
         </section>
     </main>
