--- a/Jiji.html
+++ b/Jiji.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="row px-3 justify-content-center">
                     <div class="col d-flex justify-content-center">
-                        <img src="./img/Shal/Shal-StaMap.png" alt="沙崙線 中洲站 經由 長榮大學站 沙崙站"></div>
+                        <img src="./img/Jiji/Jiji-StaMap.png" alt="集集線 二水站 經由 源泉站 車埕站"></div>
                 </div>
             </div>
         </section>
@@ -92,125 +92,131 @@
             <div class="container-fluid img-main-bgi">
                 <div class="container section2">
                     <div class="row">
-                        <div class="col"><img src="./img/Shal/main-Shal-title.png" alt="沙崙支旅"></div>
+                        <div class="col"><img src="./img/Jiji/main-Jiji-title.png" alt="集集支旅"></div>
                     </div>
                     <div class="row text-justify text-main-cotent">
                         <div class="col">
                             <p class="my-0">
-                                <span>|</span>臺鐵為了方便旅客轉乘高鐵，於民國100年1月2日正式啟用，臺鐵沙崙線列車取代原本搭高鐵接駁巴士，交通時間由原本50分鐘縮短至22分鐘。沙崙線全程皆為高架，還開了首例橫跨國道一號，為臺鐵捷運化轉型實例。特別的是路線還經過長榮大學內，還能搭到別具臺南特色的彩繪圖案列車，讓你的接駁時刻更有樂趣！
+                                <span>|</span>集集支線為臺鐵最長的鐵路支線，最初興建原因為水力發電興建水庫的運輸鐵路，後來因豐富的觀光資源，成為臺灣觀光鐵道的先驅，它也是目前南投縣唯一仍在營運的鐵路。車埕車站的「埕」字是臺灣閩南語「場」的意思。昔日埔里糖廠於1916年始以臺車運送糖到車埕車站，將生產的糖運出，在車埕車站前有許多臺車停放，站名也因此而來。
                             </p>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-6">
-                            <div class="text-center img-main-km"><img src="./img/Shal/main-Shal-km.png"
-                                    alt="支線總長為5.3公里"></div>
+                            <div class="text-center img-main-km"><img src="./img/Jiji/main-Jiji-km.png"
+                                    alt="支線總長為29.7公里"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <img src="./img/Shal/main-Shal-trainLine.png" alt="台鐵列車 起站中洲站 迄站沙崙站">
+                            <img src="./img/Jiji/main-Jiji-trainLine.png" alt="台鐵列車 起站二水站 迄站車埕站">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- 版型A-2 -->
         <section>
             <div class="container section3">
                 <div class="row">
-                    <div class="col">
-                        <img src="./img/Jiji/Jiji-roadTitle.png" alt="涵碧步道標題">
+                    <div class="col text-center">
+                        <img src="./img/Jiji/Jiji-roadTitle.png" alt="日月潭涵碧步道">
                     </div>
                 </div>
-                <div class="row img-Jiji-road01">
+                <div class="row">
                     <div class="col">
-                        <img src="./img/Jiji/Jiji-road01.jpg" alt="步道圖">
+                        <img class="rounded-lg" src="./img/Jiji/Jiji-road01.jpg" alt="涵碧步道">
                     </div>
                 </div>
-                <div class="row text-Jiji-road01 text-justify">
+                <div class="row text-justify text-Jiji-road01">
                     <div class="col">
-                        <p><span>|</span>涵碧步道乃指蜿蜒於整個涵碧樓的森林小道，環抱涵碧山，蜿蜒緩行，全程步行時間約一個小時。坡度平緩，階梯處均以紅磚砌築，於綠林中更顯古樸典雅。步道兩側林木蒼蒼，樹流蓊鬱，常見五色鳥、山頭紅、繡眼畫眉等低海拔鳥類。由步道遠眺日月潭，水面如鏡，倒映朦朧山色，風光旖旎，堪稱一絕。
+                        <p class="my-0">
+                            <span>|</span>涵碧步道乃指蜿蜒於整個涵碧樓的森林小道，環抱涵碧山，蜿蜒緩行，全程步行時間約一個小時。坡度平緩，階梯處均以紅磚砌築，於綠林中更顯古樸典雅。步道兩側林木蒼蒼，樹流蓊鬱，常見五色鳥、山頭紅、繡眼畫眉等低海拔鳥類。由步道遠眺日月潭，水面如鏡，倒映朦朧山色，風光旖旎，堪稱一絕。
                         </p>
                     </div>
                 </div>
+            </div>
         </section>
+        <!-- 版型F-1 -->
         <section>
-            <div class="section4">
-                <div class="img-Jiji-car01">
-                    <div class="custom-row-mx-15">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-4 Jiji-car-title">
-                                    <img src="./img/Jiji/Jiji-carTitle01.png" alt="纜車">
-                                    <img src="./img/Jiji/Jiji-carTitle02.png" alt="鄰近水里站">
-                                </div>
-                            </div>
-                        </div>
+            <div class="container-fluid img-Jiji-car01">
+                <div class="container section4">
+                    <div class="row">
+                        <div class="col"><img src="./img/Jiji/Jiji-carTitle01.png" alt="日月潭纜車"></div>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row text-Jiji-car01 text-justify">
-                        <div class="col">
-                            <p><span>|</span>日月潭纜車連結了伊達邵和九族文化村，纜車上可一覽日月潭的米其林三星級湖景，欣賞群山環繞、吹著徐徐微風。車廂的紅黃藍三色，分別代表日(紅色)、月(黃色)、潭(藍色)三個意像，也代表了日九新遊程的歡樂(紅色)、樂活(黃色)與生態(藍色)水陸空三棲一體的繽紛三彩。
+                    <div class="row">
+                        <div class="col"><img src="./img/Jiji/Jiji-carTitle02.png" alt="鄰近站點 水里站"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-justify">
+                            <p class="my-0">
+                                <span>|</span>日月潭纜車連結了伊達邵和九族文化村，纜車上可一覽日月潭的米其林三星級湖景，欣賞群山環繞、吹著徐徐微風。車廂的紅黃藍三色，分別代表日(紅色)、月(黃色)、潭(藍色)三個意像，也代表了日九新遊程的歡樂(紅色)、樂活(黃色)與生態(藍色)水陸空三棲一體的繽紛三彩。
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- 版型C -->
         <section>
-            <div class="section5">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-4">
-                            <div class="row img-Jiji-islandTitle01"></div>
-                            <div class="row img-Jiji-islandTitle02"></div>
+            <div class="container section5">
+                <div class="row justify-content-between">
+                    <div class="col-4">
+                        <div>
+                            <img src="./img/Jiji/Jiji-islandTitle01.png" alt="潭中浮嶼 邵族祖靈地">
                         </div>
-                        <div class="col-6 text-Jiji-island01 text-justify">
-                            <p><span>|</span>相傳拉魯島原是邵族人虔信祖靈存聚神聖的一座聖山，邵族人的「先生媽」擇定人選時，得到祖靈的同意，女巫才得到資格，日後才能負起念咒語、主持祭典的重任。
-                            </p>
+                        <div>
+                            <img src="./img/Jiji/Jiji-islandTitle02.png" alt="拉魯島">
                         </div>
                     </div>
-                    <div class="row img-Jiji-island01">
+                    <div class="col-6 text-justify">
+                        <p class="my-0">
+                            <span>|</span>相傳拉魯島原是邵族人虔信祖靈存聚神聖的一座聖山，邵族人的「先生媽」擇定人選時，得到祖靈的同意，女巫才得到資格，日後才能負起念咒語、主持祭典的重任。</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <img class="rounded-lg" src="./img/Jiji/Jiji-island01.jpg" alt="拉魯島">
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- 下一支線swiper -->
         <section>
-            <div class="container section6">
+            <div class="container nextTrip">
                 <div class="row">
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-prev"><img src="./img/main/main-btnL.png" alt="往前一支線"></div>
+                        <div class="swiper-button-prev"><img src="./img/main/nextTrip/main-btnL.png" alt="往前一支線"></div>
                     </div>
                     <div class="col-10 m-auto">
                         <!-- Swiper: Loop Mode with Multiple Slides Per Group -->
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Neiw.png" alt="內灣線">
+                                    <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Liuj.png" alt="六家線">
+                                    <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Jiji.png" alt="集集線">
+                                    <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shal.png" alt="沙崙線">
+                                    <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Shen.png" alt="深澳線">
+                                    <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/main-btn-Ping.png" alt="平溪線">
+                                    <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1">
                         <!-- Add Arrows -->
-                        <div class="swiper-button-next"><img src="./img/main/main-btnR.png" alt="往後一支線"></div>
+                        <div class="swiper-button-next"><img src="./img/main/nextTrip/main-btnR.png" alt="往後一支線"></div>
                     </div>
                 </div>
             </div>
