--- a/service.html
+++ b/service.html
@@ -27,11 +27,11 @@
         <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
-                    <img src="./img/main/Logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
+                    <img src="./img/main/Logo-en.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    aria-label="Toggle navigation" data-toggle="dropdown" aria-haspopup="true">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- 選單選項 -->
@@ -70,7 +70,7 @@
                 <div id="hero-slides" class="row">
                     <div id="slides-cont">
                         <div id="slides">
-                            <div class="slide col-4" style="background-image: url('./img/service/ser-card1bgi.jpg');">
+                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card1bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card1-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Taiwan Railways Administration ,MOTC.</div>
@@ -81,7 +81,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="slide col-4" style="background-image: url('./img/service/ser-card2bgi.jpg');">
+                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card2bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card2-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Tourism Bureau, MOTC.</div>
@@ -91,7 +91,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="slide col-4" style="background-image: url('./img/service/ser-card3bgi.jpg');">
+                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card3bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card3-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Taiwan High Speed Rail</div>
