--- a/Neiw.html
+++ b/Neiw.html
@@ -27,11 +27,11 @@
         <nav class="navbar navbar-expand-xl navbar-dark nav-white">
             <div class="container">
                 <a class="navbar-brand py-0" href="./index.html">
-                    <img src="./img/main/Logo.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
+                    <img src="./img/main/Logo-en.png" alt="台鐵 鐵路 支線 鐵支路 Logo"></a>
                 <!-- 漢堡條 -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    aria-label="Toggle navigation" data-toggle="dropdown" aria-haspopup="true">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- 選單選項 -->
@@ -282,6 +282,9 @@
     </script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <!-- Modernizr.mq() JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+        integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
 
     <script src="./js/script.js"></script>
 </body>
