--- a/service.html
+++ b/service.html
@@ -70,7 +70,8 @@
                 <div id="hero-slides" class="row">
                     <div id="slides-cont">
                         <div id="slides">
-                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card1bgi.jpg');">
+                            <div class="slide col-4 col-lg-12"
+                                style="background-image: url('./img/service/ser-card1bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card1-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Taiwan Railways Administration ,MOTC.</div>
@@ -81,7 +82,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card2bgi.jpg');">
+                            <div class="slide col-4 col-lg-12"
+                                style="background-image: url('./img/service/ser-card2bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card2-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Tourism Bureau, MOTC.</div>
@@ -91,7 +93,8 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="slide col-4 col-lg-12" style="background-image: url('./img/service/ser-card3bgi.jpg');">
+                            <div class="slide col-4 col-lg-12"
+                                style="background-image: url('./img/service/ser-card3bgi.jpg');">
                                 <div class="number"><img src="./img/service/ser-card3-logo.png" alt=""></div>
                                 <div class="body">
                                     <div class="location">Taiwan High Speed Rail</div>
@@ -129,6 +132,10 @@
     </script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <!-- Modernizr.mq() JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+        integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
+
 
     <script src="./js/service_script.js"></script>
 </body>
