--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link px-3" href="./Ping.html">平溪線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="./Service.html">旅客服務</a>
+                            <a class="nav-link px-3" href="./service.html">旅客服務</a>
                         </li>
                     </ul>
                 </div>
@@ -140,7 +140,8 @@
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <!-- Modernizr.mq() JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+        integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
 
     <script src="./js/index_script.js"></script>
 </body>
