--- a/Neiw.html
+++ b/Neiw.html
@@ -56,7 +56,7 @@
                             <a class="nav-link px-3" href="./Ping.html">平溪線</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="./Service.html">旅客服務</a>
+                            <a class="nav-link px-3" href="./service.html">旅客服務</a>
                         </li>
                     </ul>
                 </div>
@@ -232,22 +232,28 @@
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Neiw.png" alt="內灣線">
+                                    <a href="./Neiw.html"><img src="./img/main/nextTrip/main-btn-Neiw.png"
+                                            alt="內灣線"></a>
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Liuj.png" alt="六家線">
+                                    <a href="./Liuj.html"><img src="./img/main/nextTrip/main-btn-Liuj.png"
+                                            alt="六家線"></a>
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Jiji.png" alt="集集線">
+                                    <a href="./Jiji.html"><img src="./img/main/nextTrip/main-btn-Jiji.png"
+                                            alt="集集線"></a>
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Shal.png" alt="沙崙線">
+                                    <a href="./Shal.html"><img src="./img/main/nextTrip/main-btn-Shal.png"
+                                            alt="沙崙線"></a>
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Shen.png" alt="深澳線">
+                                    <a href="./Shen.html"><img src="./img/main/nextTrip/main-btn-Shen.png"
+                                            alt="深澳線"></a>
                                 </div>
                                 <div class="swiper-slide img-main-btn">
-                                    <img src="./img/main/nextTrip/main-btn-Ping.png" alt="平溪線">
+                                    <a href="./Ping.html"><img src="./img/main/nextTrip/main-btn-Ping.png"
+                                            alt="平溪線"></a>
                                 </div>
                             </div>
                         </div>
