modify navbar service link

--- a/Liuj.html
+++ b/Liuj.html
@@ -56,7 +56,7 @@
               <a class="nav-link px-3" href="./Ping.html">平溪線</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="./Service.html">旅客服務</a>
+              <a class="nav-link px-3" href="./service.html">旅客服務</a>
             </li>
           </ul>
         </div>
