--- a/Jiji.html
+++ b/Jiji.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
         integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.css"
+        integrity="sha512-kftIhGv/k/oRHmfDRDEb1MxlaWlW4tiz21rx0yNC2zUWM2n4nxRtX1z3Ijmu54he3Yf9sBX4skJaCe3LTJV1rQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/main_style.css">
     <link rel="stylesheet" href="./css/Jiji_style.css">
@@ -71,19 +73,22 @@
                     <div class="col-9">
                         <div class="img-main-digibar">
                             <img src="./img/main/main-digibar-Mq01.png" alt="數位板跑馬燈框">
-                            <img src="./img/main/main-digibar-Mq02.png" alt="數位板跑馬燈框"></div>
+                            <img src="./img/main/main-digibar-Mq02.png" alt="數位板跑馬燈框">
+                        </div>
                         <div class="marquee"></div>
                     </div>
                     <div class="col-3">
                         <div class="img-main-digibar">
-                            <img src="./img/main/main-digibar-api.png" alt="數位板天氣現象 現在時間"></div>
+                            <img src="./img/main/main-digibar-api.png" alt="數位板天氣現象 現在時間">
+                        </div>
                         <div class="localweather"></div>
                         <div class="localtime"></div>
                     </div>
                 </div>
                 <div class="row px-3 justify-content-center">
                     <div class="col d-flex justify-content-center">
-                        <img src="./img/Jiji/Jiji-StaMap.png" alt="集集線 二水站 經由 源泉站 車埕站"></div>
+                        <img src="./img/Jiji/Jiji-StaMap.png" alt="集集線 二水站 經由 源泉站 車埕站">
+                    </div>
                 </div>
             </div>
         </section>
@@ -171,7 +176,8 @@
                     </div>
                     <div class="col-6 text-justify">
                         <p class="my-0">
-                            <span>|</span>相傳拉魯島原是邵族人虔信祖靈存聚神聖的一座聖山，邵族人的「先生媽」擇定人選時，得到祖靈的同意，女巫才得到資格，日後才能負起念咒語、主持祭典的重任。</p>
+                            <span>|</span>相傳拉魯島原是邵族人虔信祖靈存聚神聖的一座聖山，邵族人的「先生媽」擇定人選時，得到祖靈的同意，女巫才得到資格，日後才能負起念咒語、主持祭典的重任。
+                        </p>
                     </div>
                 </div>
                 <div class="row">
@@ -238,18 +244,20 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        </script>
     <!-- jQuery-Marquee JS -->
     <script src="https://cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript">
     </script>
     <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js"
+        integrity="sha512-pY1t/ADgTwbfGbw0+mRGd33EroA5YgRUWhQNFpPIAdBzyoSb38FsFrf4wBTcS3GFPdTfgtpRrbGCkdl2C2OXYA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Modernizr.mq() JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
