--- a/Shen.html
+++ b/Shen.html
@@ -16,7 +16,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
   <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.css"
+    integrity="sha512-kftIhGv/k/oRHmfDRDEb1MxlaWlW4tiz21rx0yNC2zUWM2n4nxRtX1z3Ijmu54he3Yf9sBX4skJaCe3LTJV1rQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="./css/main_style.css">
   <link rel="stylesheet" href="./css/Shen_style.css">
@@ -71,19 +73,22 @@
           <div class="col-9">
             <div class="img-main-digibar">
               <img src="./img/main/main-digibar-Mq01.png" alt="數位板跑馬燈框">
-              <img src="./img/main/main-digibar-Mq02.png" alt="數位板跑馬燈框"></div>
+              <img src="./img/main/main-digibar-Mq02.png" alt="數位板跑馬燈框">
+            </div>
             <div class="marquee"></div>
           </div>
           <div class="col-3">
             <div class="img-main-digibar">
-              <img src="./img/main/main-digibar-api.png" alt="數位板天氣現象 現在時間"></div>
+              <img src="./img/main/main-digibar-api.png" alt="數位板天氣現象 現在時間">
+            </div>
             <div class="localweather"></div>
             <div class="localtime"></div>
           </div>
         </div>
         <div class="row px-3 justify-content-center">
           <div class="col d-flex justify-content-center">
-            <img src="./img/Shen/Shen-StaMap.png" alt="深澳線 瑞芳站 經由 海科館站 八斗子站"></div>
+            <img src="./img/Shen/Shen-StaMap.png" alt="深澳線 瑞芳站 經由 海科館站 八斗子站">
+          </div>
         </div>
       </div>
     </section>
@@ -128,7 +133,8 @@
           </div>
           <div class="col-6 text-justify">
             <p class="my-0">
-              <span>|</span>最美海景風光，融合鐵道煤礦文化，八斗子車站橫跨基隆市及新北市，其依山傍海、海天一色的絕美風景，深澳線曾被推舉為「臺灣最美海岸支線」。</p>
+              <span>|</span>最美海景風光，融合鐵道煤礦文化，八斗子車站橫跨基隆市及新北市，其依山傍海、海天一色的絕美風景，深澳線曾被推舉為「臺灣最美海岸支線」。
+            </p>
           </div>
         </div>
         <div class="row">
@@ -144,7 +150,8 @@
         <div class="row">
           <div class="col text-justify">
             <p class="my-0">
-              <span>|</span>這條可說是離海岸線最近的鐵道自行車道，在騎乘的路途中，白浪奔騰、碧波萬頃的景象彷彿觸手可及。沿線經過的建基煤礦舊址曾是全台灣第一大的海底煤礦，也是深澳發展史上不可或缺的一頁。</p>
+              <span>|</span>這條可說是離海岸線最近的鐵道自行車道，在騎乘的路途中，白浪奔騰、碧波萬頃的景象彷彿觸手可及。沿線經過的建基煤礦舊址曾是全台灣第一大的海底煤礦，也是深澳發展史上不可或缺的一頁。
+            </p>
           </div>
         </div>
         <div class="row">
@@ -202,7 +209,8 @@
             <div class="text-center"><img src="./img/Shen/Shen-araTitle02.png" alt="壯麗的奇岩異石"></div>
             <div>
               <p class="my-0">
-                <span>|</span>阿拉寶灣內最知名的就屬豆腐岩景觀，在日出時黃金般的陽光灑落在，因自然海蝕而形成一格格的塊狀岩石，美得不可方物，因而被「美國中文網」獲選為「全球21個最美日出觀測點」之一。</p>
+                <span>|</span>阿拉寶灣內最知名的就屬豆腐岩景觀，在日出時黃金般的陽光灑落在，因自然海蝕而形成一格格的塊狀岩石，美得不可方物，因而被「美國中文網」獲選為「全球21個最美日出觀測點」之一。
+              </p>
             </div>
           </div>
           <div class="col-6"><img class="rounded-lg" src="./img/Shen/Shen-ara02.jpg" alt="豆腐岩景觀"></div>
@@ -260,18 +268,20 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+    </script>
   <!-- jQuery-Marquee JS -->
   <script src="https://cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript">
   </script>
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js"
+    integrity="sha512-pY1t/ADgTwbfGbw0+mRGd33EroA5YgRUWhQNFpPIAdBzyoSb38FsFrf4wBTcS3GFPdTfgtpRrbGCkdl2C2OXYA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Modernizr.mq() JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
     integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
